# lineage-bridge

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  DOCKER_PUBLISHING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  openapi.yaml  pyproject.toml  sitemap.xml
INTEGRATION_TESTS_BUG_FIXES/: index.html
INTEGRATION_TESTS_SUMMARY/: index.html
STATUS/: index.html
VALIDATION_REPORT/: index.html
VALIDATION_REPORT_FINAL/: index.html
api-guide/: index.html
api-reference/: index.html
api_reference_cards/: index.html
architecture/: index.html
catalog-integration/: index.html
contributing/: index.html
crew/: index.html
decisions/: index.html
demos/: index.html
docs/: INTEGRATION_TESTS_BUG_FIXES.md  INTEGRATION_TESTS_SUMMARY.md  STATUS.md  VALIDATION_REPORT.md  VALIDATION_REPORT_FINAL.md  api-guide.md  api_reference_cards.md  crew.md  decisions.md  index.md  openapi.yaml  plan-refactor.md  plan.md  ux-audit.md  ux-redesign-proposal.md
getting-started/: index.html
how-to/: index.html
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
lineage_bridge/: __init__.py
plan/: index.html
plan-refactor/: index.html
scripts/: README.md  cache_demo_credentials.py  demo-welcome-dialog.sh  docker-publish.sh  ensure-cloud-key.sh  env-from-terraform.sh  integration-test-bigquery.sh  integration-test-glue.sh  integration-test-uc.sh  quickstart.sh  test_databricks_lineage.py  validate-docs.sh
search/: search_index.json
tests/: conftest.py
user-guide/: index.html
(+338 files in other folders)
