[project]
name = "lineage-bridge"
version = "0.1.0"
description = "Extract stream lineage from Confluent Cloud and visualize it"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "networkx>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "streamlit>=1.30",
    "streamlit-agraph>=0.0.45",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.3",
]

[project.scripts]
lineage-bridge-extract = "lineage_bridge.extractors.orchestrator:main"
lineage-bridge-ui = "lineage_bridge.ui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
